package org.example.sae301objectaid;

public interface Observateur {
    public void actualiser(Sujet s);
}
