@startuml
'https://plantuml.com/class-diagram

interface Sujet{}

interface Observateur{}

class VueAfficheur{}

class Tree{}

class Main{}

class Model{}

Sujet <|.. Model
Main --> Model
Model <- VueAfficheur
Observateur <-- Model
Observateur <|.. VueAfficheur
Main -> VueAfficheur
VueAfficheur -> Tree

@enduml